Wait while all philosopher sit at the table

--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -21,6 +21,7 @@ IGNORE_PATHS = ! -path "./cmake-build-debug/*"
 OBJDIR = ./src/obj
 INCLUDE = ./Includes
 SRC_PATHS = ./src \
+			./src/lifecycle \
 			./src/utils \
 			./src/parser
 
