--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 NAME = philo_one
-CC = gcc
+CC = gcc -Wall -Werror -Wextra
 P_THREAD = -pthread
 C_FILES = $(shell find . -name "*.c" $(IGNORE_PATHS) -execdir echo {} ';')
 OBJ = $(C_FILES:%.c=%.o)
